# diet-dashboard

./: .dockerignore  .env.example  .env.local.example  .eslintrc.json  .gitignore  .prettierignore  README.md  get-local-ip.js  package-lock.json  package.json  tailwind.config.js  test-clean-architecture.js  vercel.json  vitest.config.ts
.claude/agents/: quality-checker.md  task-decomposer.md  task-executor.md
.codex/agents/: quality-checker.toml  task-decomposer.toml  task-executor.toml
.github/workflows/: ci.yml
docs/: branch-strategy.md  cockroachdb-migration.md  code-analysis-solid-principles.md  database-migration-strategy.md  deployment-guide.md  pfc-deployment.md  prisma-migration-plan.md  shortcut-setup.md  target.md  testing-guide.md  troubleshooting-iphone.md
ios/DietHealthSync/: DietHealthSyncApp.swift  HealthKitSync.swift  Info.plist
prisma/: schema.prisma
prisma/migrations/: add_pfc_nutrition_fields.sql  create_goals_table.sql  (+1 more)
scripts/: create-mobile-pairing-code.js  debug-achievement.js  debug-pfc.js  debug-pfc.ts  generate-api-key.js  insert-goals.ts  test-page.html  test-yesterday.js
supabase/: schema.sql
weight-ml/: .gitignore  README.md  pyproject.toml
weight-ml/data/: health_data.csv.example
weight-ml/orchestration/: Dockerfile.airflow  Dockerfile.mlflow  docker-compose.yml  init-db.sql
weight-ml/orchestration/dags/: weight_forecast.py
weight-ml/src/weight_ml/: __init__.py  api_client.py  data.py  mlflow_pipeline.py  models.py  predict.py  registry.py  train.py
weight-ml/tests/: test_data.py  test_registry.py  test_train.py
(+93 files in other folders)
